--- a/and-bible/app/src/main/res/values-nl/strings.xml
+++ b/and-bible/app/src/main/res/values-nl/strings.xml
@@ -3,9 +3,14 @@
   <string name="app_name">And Bible</string>
   <!--Startup & Help-->
   <string name="splash_top_text">
-\n \"En God zei: \'Er moet licht komen en er was licht.\" \nGenesis 1:3</string>
-  <string name="help_text">Druk op de Menutoets voor acties\n\n\Ga naar het volgende of vorige hoofdstuk met behulp van de track-bal, D-pad of veeg op het scherm met uw vinger</string>
-  <string name="help_text_long">Navigatie \nGa naar het volgende of vorige hoofdstuk met behulp van de track-bal, D-pad of vegen op het scherm met je vinger \n\nDruk op de MENU toets voor acties \n\nOm meer documenten te downloaden druk op Menu / Download documenten \n\nDruk lang op het bijbel venster om het contextmenu te openen voor acties met betrekking tot het huidige vers. \nDruk lang op een document in de document selector om het te verwijderen of te bekijken. \n\nSpraak\nDruk op Spreek om een dialoog te starten of te stoppen met lezen \n\nBladwijzers \nBladwijzers kunnen worden toegevoegd via het vers context menu. De Bladwijzer Manager is toegankelijk via het hoofdmenu. Met het Bladwijzer Manager context menu kunnen bladwijzers worden gegroepeerd met behulp van labels. \n\nZoek\nDe zoek tekst kan bestaan uit speciale tekens, zoals *, ?, AND, OR, NOT (see \"Apache Lucene - Query Parser Syntax\" for more details) \n\nContext Menus \nDruk langere tijd op het Bijbel venster om het context menu te openen voor acties betreffende het huidige vers. \nDruk langere tijd op een document in de document selector om het te verwijderen of om informatie bekijken. \nDruk langere tijd op de knop Terug om toegang te krijgen tot de lijst Geschiedenis</string>
+\n\"En God zei: \'Er moet licht komen\' en er was licht.\"\nGenesis 1:3</string>
+  <string name="help_text">Druk op de Menutoets voor acties\n\n\Ga naar het volgende of vorige hoofdstuk met behulp van de trackbal, het D-pad of veeg op het scherm met uw vinger</string>
+  <string name="help_text_long">Navigatie\nGa naar het volgende of vorige hoofdstuk met behulp van de trackbal, het D-pad of veeg op het scherm met uw vinger.
+\nDubbel tikken schakelt volledig scherm in/uit.
+\n\nDruk op de MENU-knop voor acties. 
+\n\nDruk op Menu/Administratie/Documenten downloaden om meer documenten te downloaden.
+\n\nSpraak\nDruk op Spreken om een dialoogvenster te openen waar u het voorlezen kunt starten op stoppen.
+\n\nDruk lang op het bijbel venster om het contextmenu te openen voor acties met betrekking tot het huidige vers. \nDruk lang op een document in de document selector om het te verwijderen of te bekijken. \n\nSpraak\nDruk op Spreek om een dialoog te starten of te stoppen met lezen \n\nBladwijzers \nBladwijzers kunnen worden toegevoegd via het vers context menu. De Bladwijzer Manager is toegankelijk via het hoofdmenu. Met het Bladwijzer Manager context menu kunnen bladwijzers worden gegroepeerd met behulp van labels. \n\nZoek\nDe zoek tekst kan bestaan uit speciale tekens, zoals *, ?, AND, OR, NOT (see \"Apache Lucene - Query Parser Syntax\" for more details) \n\nContext Menus \nDruk langere tijd op het Bijbel venster om het context menu te openen voor acties betreffende het huidige vers. \nDruk langere tijd op een document in de document selector om het te verwijderen of om informatie bekijken. \nDruk langere tijd op de knop Terug om toegang te krijgen tot de lijst Geschiedenis</string>
   <string name="version_text">Versie %s</string>
   <string name="no_sdcard_error">Voer een SD-kaart in en start And Bible opnieuw.</string>
   <!--Main menu-->
@@ -25,7 +30,7 @@
   <string name="bible">Bijbel</string>
   <string name="deuterocanonical">Deuterocanoniek</string>
   <!--Search-->
-  <string name="search_index">In de index zoeken</string>
+  <string name="search_index">Index doorzoeken</string>
   <string name="index_creation_required">Een index is nodig om te zoeken.\n\nIndexen kunnen worden gedownload van het internet of lokaal gecreëerd worden.\n\nDownloaden is veel sneller en gedownloade indexen bevatten meer zoekfuncties. \n\nEen internetverbinding is vereist om indexen te downloaden.
 </string>
   <string name="indexing_wait_msg">Als het indexeren klaar is, zal het zoekscherm verschijnen.</string>
@@ -44,7 +49,7 @@
   <string name="search_any_word">Elk woord</string>
   <string name="search_phrase">Bewoording</string>
   <string name="search_result_count">%d items gevonden</string>
-  <string name="search_showing_first">Te veel items. Weergegeven eerste %d</string>
+  <string name="search_showing_first">Te veel items. De eerste %d worden weergegeven.</string>
   <string name="search_bible_section_group_prompt">Waar te zoeken</string>
   <string name="search_all_bible">Gehele bijbel</string>
   <string name="search_new_testament">Nieuwe Testament</string>
@@ -56,6 +61,10 @@
   <string name="prefs_show_verseno_summary">Versnummers weergeven</string>
   <string name="prefs_verse_per_line_title">Eén vers per regel</string>
   <string name="prefs_verse_per_line_summary">Elk vers op een andere regel weergeven</string>
+  <string name="prefs_show_bookmarks_title">Bladwijzers weergeven</string>
+  <string name="prefs_show_bookmarks_summary">Vink af om alle bladwijzers te verbergen</string>
+  <string name="prefs_default_bookmark_style_title">Standaard bladwijzerstijl</string>
+  <string name="prefs_default_bookmark_style_summary">Markeringskleur of -pictogram</string>
   <string name="prefs_show_mynotes_title">Mijn notitie-pictogrammen weergeven</string>
   <string name="prefs_show_mynotes_summary">Pictogram weergeven in verzen met Mijn notitie</string>
   <string name="prefs_show_notes_title">Voetnoten en kruisverwijzingen</string>
@@ -86,6 +95,11 @@
   <string name="prefs_interface_locale_title">Applicatietaal</string>
   <string name="prefs_interface_locale_summary">Selecteer een aangepaste taal voor deze app</string>
   <string name="locale_change_warning">De app zal opnieuw worden gestart om over te schakelen op de nieuwe taal</string>
+  <string name="prefs_speak_speed_title">Spraaksnelheid</string>
+  <string name="prefs_speak_speed_summary">Langzamer of sneller spreken</string>
+  <string name="speak_speed_slow">Langzaam</string>
+  <string name="speak_speed_normal">Normaal</string>
+  <string name="speak_speed_fast">Snel</string>
   <!--Window-->
   <string name="window">Venster</string>
   <string name="windowClose">Sluiten</string>
@@ -101,9 +115,9 @@
   <!--Strongs-->
   <string name="strongs">Strong\'s woordenboek</string>
   <string name="strongs_not_installed">Download Strong\'s Hebreeuws en Grieks woordenboek</string>
-  <string name="all_greek_occurrences">Zoek alle gebeurtenissen</string>
-  <string name="all_hebrew_occurrences">Zoek alle gebeurtenissen</string>
-  <string name="no_indexed_bible_with_strongs_ref">U moet een bijbel met Strong-nummers downloaden en de index downloaden via Zoek</string>
+  <string name="all_greek_occurrences">Alle gebeurtenissen zoeken</string>
+  <string name="all_hebrew_occurrences">Alle gebeurtenissen zoeken</string>
+  <string name="no_indexed_bible_with_strongs_ref">U moet een bijbel met Strong-nummers downloaden en de index downloaden via Zoeken</string>
   <string name="morph_robinson_not_installed">Download \'Robinson\'s Morfologische analyse Codes\' woordenboek</string>
   <string name="strongs_toggle_button_on">nnnn</string>
   <string name="strongs_toggle_button_off">nnnn</string>
@@ -115,33 +129,33 @@
   <string name="download_refreshing_book_list">Bezig met verversen van de lijst met beschikbare documenten</string>
   <string name="download_refresh_book_list_menu_item">Verversen</string>
   <string name="error_downloading">Er is een fout opgetreden bij het downloaden. Controleer uw internetverbinding.</string>
-  <string name="no_internet_connection">Kan geen verbinding maken met het internet </string>
+  <string name="no_internet_connection">Kan geen verbinding maken met het internet</string>
   <string name="storage_space_warning">Onvoldoende lokale opslagruimte.</string>
-  <string name="wait_for_bible">Wacht tot And bijbel het downloaden heeft voltooid. Het hoofdscherm zal dan verschijnen.</string>
-  <string name="wait_for_bible_not_yet">Een ogenblik geduld. Een bijbelinstallatie is nog niet afgerond.</string>
+  <string name="wait_for_bible">Wacht tot And bijbel het downloaden heeft voltooid. Na het downloaden zal het hoofdscherm verschijnen.\n\nDownload achteraf meer documenten door te navigeren naar Menuknop/Administratie/Documenten downloaden.</string>
+  <string name="wait_for_bible_not_yet">Een ogenblik geduld; één van de bijbelinstallaties is nog niet afgerond.</string>
   <string name="download_complete_no_bibles">Er is geen bijbel geïnstalleerd. Druk op Terug en probeer het opnieuw.</string>
-  <string name="too_many_jobs">Te veel taken in uitvoering. Wacht tot sommigen beëindigd zijn en probeer het opnieuw.</string>
+  <string name="too_many_jobs">Er worden teveel taken uitgevoerd. Wacht tot sommige beëindigd zijn en probeer het opnieuw.</string>
   <string name="document_not_installed">Download alstublieft \'%s\'</string>
   <!--Install zip file-->
   <string name="install_zip">Document laden vanuit ZIP-bestand</string>
   <string name="install_zip_successfull">De module is succesvol geïnstalleerd</string>
-  <string name="extracting_zip_file">Bezig met het uitpakken van het ZIP-bestand...</string>
-  <string name="checking_zip_file">Bezig met het controleren van het opgegeven bestand...</string>
+  <string name="extracting_zip_file">Bezig met uitpakken van ZIP-bestand...</string>
+  <string name="checking_zip_file">Bezig met controleren van het opgegeven bestand...</string>
   <string name="invalid_module">Het bestand bevat geen geldige SWORD-module</string>
   <string name="module_already_installed">Het bestand bevat een module die reeds geïnstalleerd is</string>
   <!--Daily Reading Plan-->
   <string name="rdg_plan_title">Leesplan</string>
   <string name="rdg_plan_selector_title">Kies een leesplan</string>
   <string name="rdg_plan_day">Dag %s</string>
-  <string name="rdg_plan_set_start_jan1">Start 1 jan</string>
+  <string name="rdg_plan_set_start_jan1">Starten op 1 jan</string>
   <string name="done">Klaar</string>
   <string name="reset">Herstellen</string>
-  <string name="rdg_plan_y1ntpspr">Het Nieuwe Testament, Psalmen en Spreuken in 1 jaar</string>
-  <string name="rdg_plan_y1ot1nt1_chronological">Door de Bijbel in 1 jaar, chronologisch</string>
+  <string name="rdg_plan_y1ntpspr">Het Nieuwe Testament, Psalmen en Spreuken in 1 jaar tijd</string>
+  <string name="rdg_plan_y1ot1nt1_chronological">Chronologisch door de Bijbel in 1 jaar</string>
   <string name="rdg_plan_y1ot1nt1_OTandNT">Door de Bijbel in 1 jaar - Oude en Nieuwe Testament</string>
-  <string name="rdg_plan_y1ot1nt1_OTthenNT">Door de Bijbel in 1 jaar - Oude en Nieuwe Testament</string>
+  <string name="rdg_plan_y1ot1nt1_OTthenNT">Door de Bijbel in 1 jaar - eerst Oude, dan Nieuwe Testament</string>
   <string name="rdg_plan_y1ot1nt2_mcheyne">Door de Bijbel in 1 jaar (M\'Cheyne)</string>
-  <string name="rdg_plan_y2ot1ntps2">2 jaren-plan - Oude Test. 1 keer, Nieuwe Test. en Psalmen 2 keer</string>
+  <string name="rdg_plan_y2ot1ntps2">2 jaren-plan - 1 keer Oude Testament; 2 keer Nieuwe Testament en Psalmen</string>
   <!--string name="rdg_plan_m1gospels">Through the Gospels in a month</string-->
   <!--Document context menu-->
   <string name="delete">Verwijderen</string>
@@ -153,28 +167,30 @@
   <string name="notes">Voetnoten en verwijzingen</string>
   <string name="copy">Kopiëren</string>
   <string name="share_verse">Delen ...</string>
-  <string name="share_verse_subject">Een bijbelvers is met u gedeeld tijdens het gebruik van And Bible</string>
+  <string name="share_verse_subject">Er is een bijbelvers met u gedeeld vanuit And Bible</string>
   <string name="compare_translations">Vertalingen vergelijken</string>
   <!--Bookmarks-->
   <string name="bookmarks">Bladwijzers</string>
   <string name="add_bookmark">Bladwijzer toevoegen</string>
   <string name="delete_bookmark">Bladwijzer verwijderen</string>
   <string name="bookmark_added">Bladwijzer toegevoegd</string>
-  <string name="bookmark_exists">Blawijzer bestaat al</string>
+  <string name="bookmark_exists">Bladwijzer bestaat al</string>
   <string name="bookmark_deleted">Bladwijzer is verwijderd</string>
   <string name="bookmark_labels">Bladwijzerlabels</string>
+  <string name="manage_labels">Bladwijzerlabels beheren</string>
   <string name="assign_labels">Labels toewijzen</string>
   <string name="new_label">Nieuw label</string>
   <string name="label_name_prompt">Naam</string>
-  <string name="label_unlabelled">Niet gelabeld</string>
-  <string name="rename">Hernoemen</string>
+  <string name="label_unlabelled">Ongelabeld</string>
+  <string name="rename">Naam wijzigen</string>
+  <string name="style">Stijl</string>
   <!--Sort orders used for Bookmarks and MyNotes-->
   <string name="sort_by_date">Datumvolgorde</string>
   <string name="sort_by_bible_book">Bijbelse volgorde</string>
   <string name="sort_by_alphabetical">Alfabetische volgorde</string>
   <!--Dictionary-->
   <string name="dictionary">Woordenboek</string>
-  <string name="search_dictionary_hint">In woordenboek zoeken</string>
+  <string name="search_dictionary_hint">Woordenboek doorzoeken</string>
   <string name="dictionary_contents">Inhoud</string>
   <!--General Book-->
   <string name="general_book">Boek</string>
@@ -184,11 +200,11 @@
   <!--Speak - Bible-->
   <string name="one_chapter">%d hoofdstuk</string>
   <string name="some_chapters">%d hoofdstukken</string>
-  <string name="rest_of_book">Naar het einde van het boek</string>
+  <string name="rest_of_book">Naar einde van boek</string>
   <!--Speak - Commentary-->
   <string name="one_verse">%d vers</string>
   <string name="some_verses">%d verzen</string>
-  <string name="rest_of_chapter">Naar het einde van het hoofdstuk</string>
+  <string name="rest_of_chapter">Naar einde van hoofdstuk</string>
   <!--Speak - Dictionary and other-->
   <string name="one_page">%d pagina</string>
   <string name="some_pages">%d pagina\'s</string>
@@ -207,11 +223,11 @@
   <string name="mynote_view_edit">Mijn notities</string>
   <string name="mynote_saved">Mijn notitie is opgeslagen</string>
   <!--Backup and restore-->
-  <string name="backup">Back-uppen</string>
+  <string name="backup">Back-up maken</string>
   <string name="backup_success">Mijn notities en Bladwijzers opslaan in %s op de SD-kaart</string>
   <string name="restore">Herstellen</string>
   <string name="restore_confirmation">Mijn Notities en Bladwijzers overschrijven?</string>
-  <string name="restore_success">Mijn Notities en Bladwijzers hersteld van %s op de SD-kaart</string>
+  <string name="restore_success">Mijn Notities en Bladwijzers zijn hersteld van %s op de SD-kaart</string>
   <!--About-->
   <string name="about_copyright">Copyright: %s</string>
   <string name="about_version">Versie: %s</string>
@@ -234,16 +250,17 @@
   <string name="more">Meer</string>
   <string name="more_dotted">Meer...</string>
   <string name="retry">Opnieuw proberen</string>
-  <string name="please_wait">Een ogenblik geduld a.u.b....</string>
+  <string name="please_wait">Even geduld...</string>
   <string name="all">Alles</string>
   <string name="default_value">@string/lang_default</string>
   <string name="new_item">Nieuw</string>
   <string name="close">Sluiten</string>
+  <string name="edit">Bewerken</string>
   <!--Errors-->
   <string name="report_error">Rapport versturen</string>
   <string name="error_occurred">Er is een fout opgetreden</string>
   <string name="error_no_content">Geen inhoud voor het geselecteerde vers</string>
   <string name="error_page_too_large">De pagina is te groot om te worden geladen</string>
   <string name="error_key_not_in_document">Niet gevonden in het document</string>
-  <string name="empty_list">Geen artikelen om weer te geven</string>
+  <string name="empty_list">Geen weer te geven items</string>
 </resources>
