--- a/and-bible/app/src/main/res/values-sl/strings.xml
+++ b/and-bible/app/src/main/res/values-sl/strings.xml
@@ -89,6 +89,11 @@
   <string name="prefs_interface_locale_title">Jezik aplikacije</string>
   <string name="prefs_interface_locale_summary">Izbira jezika uporabniškega vmesnika</string>
   <string name="locale_change_warning">Aplikacija bo ponovno zagnana, da lahko preklopi na drug jezika uporabniškega vmesnika</string>
+  <string name="prefs_speak_speed_title">Hitrost govora</string>
+  <string name="prefs_speak_speed_summary">Govori počasneje ali hitreje</string>
+  <string name="speak_speed_slow">Počasi</string>
+  <string name="speak_speed_normal">Običajno</string>
+  <string name="speak_speed_fast">Hitro</string>
   <!--Window-->
   <string name="window">Okno</string>
   <string name="windowClose">Zapri</string>
