--- a/and-bible/app/src/main/res/values-hu/strings.xml
+++ b/and-bible/app/src/main/res/values-hu/strings.xml
@@ -5,9 +5,20 @@
   <string name="splash_top_text">
 \"Akkor ezt mondta Isten: Legyen világosság! És lett világosság.\"\nI. Mózes 1:3</string>
   <string name="help_text">A funkciók eléréséhez nyomd meg a MENÜ gombot\n\nAz előző vagy következő fejezethez ugráshoz, használd a trackballt, D-padot vagy húzd végig az ujjad a képernyőn</string>
-  <string name="help_text_long"><b>Navigáció</b>\nAz előző vagy következő fejezethez ugráshoz, használd a trackballt, D-padot vagy húzd végig az ujjad a képernyőn.\n\nKettős koppintással lehet be-/kikapcsolni a teljes képernyőt. \n\n<b>Menü</b> \nA funkciók eléréséhez nyomd meg a MENÜ gombot.\n\nTovábbi dokumentumok letöltéséhez nyomd meg a Menü / Adminisztráció / Dokumentumok letöltése opciót. \n\n<b>Felolvasás</b>\nNyomd meg a \"Felolvasás\" gombot a fejezet felolvasásához vagy a felolvasás leállításához. \n\n<b>Jegyzeteim</b> \nAz aktuális vershez kapcsolódó lehetőségekért nyomd hosszan a szöveget, hogy megnyíljon a helyi menü.\nA \"Jegyzeteim\" helyi menü opcióval lehet a jegyzeteket a versekhez rögzíteni. A meglévő jegyzeteket a főmenün keresztül érhetjük el. \n\n<b>Könyvjelzők</b> \nKönyvjelzőt a vers helyi menüjében hozhatsz létre. A könyvjelző-kezelő a főmenüben érhető el. A könyvjelző-kezelőben címkék segítségével lehet csoportosítani a könyvjelzőket. \n\n<b>Keresés</b> \nA kereső kifejezés tartalmazhat vezérlő karaktereket pl. *, ?, AND, OR, NOT (további lehetőségeket lásd az \"Apache Lucene - Query Parser Syntax\" oldalain).\n\n\n<b>Helyi menük</b> \nHosszan nyomva egy verset további funkciókat érhetsz el. \nHosszan nyomva egy dokumentumot a dokumentum-kezelőben törölheted azt, vagy további információkat érhetsz el. \nHosszan nyomva a Vissza gombot elérheted az Olvasás történetet.</string>
+  <string name="help_text_long"><b>Navigáció</b>\nTrackballal, D-paddal vagy ujjhúzással lapozhatsz az előző vagy következő fejezethez.
+ \nA dupla koppintás be-/kikapcsolja a teljes képernyőt.
+ \n\n<b>Menü</b>
+ \nA funkciók eléréséhez nyomd meg a MENÜ gombot.
+ \n\nTovábbi dokumentumok letöltéséhez nyomd meg a Menü / Adminisztráció / Dokumentumok letöltése opciót.
+ \n\n<b>Felolvasás</b>\nA „Felolvasás” gomb párbeszédablakot nyit meg a felolvasás elindításához/megállításához.
+ \n\n<b>Jegyzeteim</b> \nJegyzeteket lehet készíteni a vers helyi menüjének „Jegyzetem” opciójával. A meglévő jegyzetek listája a főmenüből érhető el.
+ \n\n<b>Könyvjelzők</b> \nKönyvjelzőt a vers helyi menüjéből hozhatsz létre. A könyvjelző-kezelő a főmenüben érhető el. A könyvjelző-kezelőben címkék segítségével lehet csoportosítani a könyvjelzőket.
+ \n\n<b>Keresés</b>\nA keresés tartalmazhat vezérlő karaktereket pl. *, ?, AND, OR, NOT (további lehetőségeket lásd az „Apache Lucene - Query Parser Syntax” oldalain).
+ \n\n<b>Helyi menük</b> \nA Biblia-nézetben hosszú nyomásra megnyílik a helyi menü a vershez elérhető funkciókkal.
+ \nA dokumentumkezelőben hosszan nyomva egy dokumentumot elérhetőek további információk és a törlési lehetőség
+\nA Vissza gomb hosszú nyomásával elérheted az előzményeket.</string>
   <string name="version_text">Verzió: %s</string>
-  <string name="no_sdcard_error">Helyezz be egy SD-kártyát, és indítsd újra az And Bible-t.</string>
+  <string name="no_sdcard_error">Helyezz be egy SD-kártyát és indítsd újra az And Bible-t.</string>
   <!--Main menu-->
   <string name="chooseBook">Dokumentum</string>
   <string name="selectPassage">Igehely</string>
@@ -17,7 +28,7 @@
   <string name="speak">Felolvasás</string>
   <string name="help">Súgó</string>
   <string name="verse">Vers</string>
-  <string name="administration">Adminisztráció</string>
+  <string name="administration">Kezelés</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Könyv kiválasztása</string>
   <string name="choosePassageChapterName">Fejezet kiválasztása</string>
@@ -26,15 +37,15 @@
   <string name="deuterocanonical">Deuterokanonikus</string>
   <!--Search-->
   <string name="search_index">Keresési index</string>
-  <string name="index_creation_required">A kereséshez egy index szükséges.\n\nAz indexek letölthetőek az internetről vagy helyben is létrehozhatóak.\n\nA letöltés sokkal gyorsabb és a letöltött indexek több keresési lehetőséget tartalmaznak.\n\nAz indexek letöltéséhez internetkapcsolat szükséges.\n</string>
-  <string name="indexing_wait_msg">Ha az indexelés befejeződött, a kereső képernyő automatikusan megjelenik.</string>
+  <string name="index_creation_required">A kereséshez indexfájlra van szükség.\n\nAz indexek letölthetőek az internetről vagy helyben is létrehozhatóak.\n\nA letöltés sokkal gyorsabb és a letöltött indexek több keresési lehetőséget tartalmaznak.\n\nAz indexek letöltéséhez internetkapcsolat szükséges.\n</string>
+  <string name="indexing_wait_msg">Ha az indexelés befejeződött, megjelenik a kereső képernyő.</string>
   <string name="index">Index</string>
   <string name="index_download">Letöltés</string>
   <string name="index_not_available_for_download">Ez az index nem tölthető le.</string>
   <string name="index_create">Létrehozás</string>
   <!--Tasks-->
   <string name="progress_status">Folyamatjelző</string>
-  <string name="task_kill_warning">Ez egy időigényes feladat, ami megszakadhat, ha más alkalmazásra vált, mielőtt befejeződne.</string>
+  <string name="task_kill_warning">Ez az időigényes feladat megszakadhat, ha a befejezés előtt másik alkalmazásra váltasz.</string>
   <string name="no_tasks_running">Jelenleg nincsenek futó feladatok.</string>
   <!--Search-->
   <string name="search_results">Keresési eredmények</string>
@@ -43,27 +54,27 @@
   <string name="search_any_word">Bármelyik szóra</string>
   <string name="search_phrase">Kifejezés</string>
   <string name="search_result_count">%d találat.</string>
-  <string name="search_showing_first">Túl sok találat. Az első %d elem megjelenítése.</string>
+  <string name="search_showing_first">Túl sok találat. Az első %d elem jelenik meg.</string>
   <string name="search_bible_section_group_prompt">Keresés helye</string>
   <string name="search_all_bible">Teljes Biblia</string>
   <string name="search_new_testament">Újszövetség</string>
   <string name="search_old_testament">Ószövetség</string>
-  <string name="search_current_book">Aktuális könyv</string>
+  <string name="search_current_book">Jelenlegi könyv</string>
   <string name="error_executing_search">Érvénytelen keresési feltétel</string>
   <!--Preferences-->
   <string name="prefs_show_verseno_title">Versszámozás</string>
   <string name="prefs_show_verseno_summary">Versszámok megjelenítése</string>
   <string name="prefs_verse_per_line_title">Soronként egy vers</string>
-  <string name="prefs_verse_per_line_summary">A verseket külön sorba tegye</string>
+  <string name="prefs_verse_per_line_summary">A verseket külön sorba szedje</string>
   <string name="prefs_show_bookmarks_title">Könyvjelzők megjelenítése</string>
   <string name="prefs_show_bookmarks_summary">Kapcsold ki a könyvjelzők elrejtéséhez</string>
   <string name="prefs_default_bookmark_style_title">Alapértelmezett könyvjelző stílus</string>
-  <string name="prefs_default_bookmark_style_summary">Kiemelés színe vagy ikonja</string>
-  <string name="prefs_show_mynotes_title">Jegyzeteim ikonok</string>
-  <string name="prefs_show_mynotes_summary">Ikon megjelenítése, ha egy vershez jegyzet tartozik</string>
+  <string name="prefs_default_bookmark_style_summary">Kiemelő szín vagy ikon</string>
+  <string name="prefs_show_mynotes_title">Jegyzetjelző ikonok</string>
+  <string name="prefs_show_mynotes_summary">Jelzés ikonnal, ha egy vershez jegyzet tartozik</string>
   <string name="prefs_show_notes_title">Lábjegyzetek és hivatkozások</string>
-  <string name="prefs_show_notes_summary">Lábjegyzetek és hivatkozások megjelenítése</string>
-  <string name="prefs_show_strongs_title">Strong számozás</string>
+  <string name="prefs_show_notes_summary">Lábjegyzetek és kereszthivatkozások megjelenítése</string>
+  <string name="prefs_show_strongs_title">Strong számozás megjelenítése</string>
   <string name="prefs_show_strongs_summary">Hivatkozás a görög és héber meghatározásokhoz</string>
   <string name="prefs_show_morphology_title">Morfológiai kódok</string>
   <string name="prefs_show_morphology_summary">Mutasd Robinson görög morfológiáját</string>
@@ -71,30 +82,35 @@
   <string name="prefs_section_title_summary">Nem kanonizált fejezetcímek megjelenítése</string>
   <string name="prefs_red_letter_title">Piros betűk</string>
   <string name="prefs_red_letter_summary">Krisztus szavait pirossal jelenítse meg</string>
-  <string name="prefs_tilt_to_scroll_title">Lapozás dőltéssel</string>
-  <string name="prefs_tilt_to_scroll_summary">Lapozás fel/le a készülék megdőltésével </string>
+  <string name="prefs_tilt_to_scroll_title">Görgetés billentéssel</string>
+  <string name="prefs_tilt_to_scroll_summary">Legörgetéshez billentsd el a telefont</string>
   <string name="prefs_night_mode_title">Esti üzemmód</string>
-  <string name="prefs_night_mode_summary">Sötétben való könnyebb olvasáshoz</string>
+  <string name="prefs_night_mode_summary">Könnyebb olvasáshoz a sötétben</string>
   <string name="prefs_night_mode_automatic">Automatikus</string>
-  <string name="prefs_navigate_to_verse_title">Vershez ugrás</string>
-  <string name="prefs_navigate_to_verse_summary">Vers (és fejezet) kiválasztása navigálásnál</string>
-  <string name="prefs_open_links_in_special_window_title">A hivatkozások megnyitása különleges ablakban. </string>
-  <string name="prefs_open_links_in_special_window_summary">A kereszthivatkozások és Strongs számok gyorsabb megnyitása érdekében.</string>
+  <string name="prefs_navigate_to_verse_title">Navigálás versig</string>
+  <string name="prefs_navigate_to_verse_summary">Válaszd ki a verset is (és a fejezetet) navigálásnál</string>
+  <string name="prefs_open_links_in_special_window_title">Hivatkozások megnyitása külön ablakban</string>
+  <string name="prefs_open_links_in_special_window_summary">A kereszthivatkozások és Strong számok gyorsabb megjelenítése érdekében.</string>
   <string name="prefs_text_size_title">Szövegméret</string>
-  <string name="prefs_text_size_summary">Betűméret megváltoztatása</string>
-  <string name="prefs_text_size_sample_text">Minta szöveg</string>
-  <string name="prefs_screen_timeout_title">Alvás</string>
-  <string name="prefs_screen_timeout_summary">Készenléti idő, miután a képernyő elalszik.</string>
+  <string name="prefs_text_size_summary">Több szöveg vagy szellősebb tagolás</string>
+  <string name="prefs_text_size_sample_text">Mintaszöveg</string>
+  <string name="prefs_screen_timeout_title">Altatás</string>
+  <string name="prefs_screen_timeout_summary">Tétlen idő a képernyő kikapcsolása előtt</string>
   <string name="x_minutes">%d perc</string>
   <string name="prefs_interface_locale_title">Alkalmazás nyelve</string>
-  <string name="prefs_interface_locale_summary">Egyéni nyelv kiválasztása</string>
-  <string name="locale_change_warning">Az alkalmazás újra fog indulni, hogy az új nyelvi beállítás érvénybe lépjen.</string>
+  <string name="prefs_interface_locale_summary">Felhasználói felület nyelvének kiválasztása</string>
+  <string name="locale_change_warning">A felület új nyelvre váltása érdekében az alkalmazás újraindul</string>
+  <string name="prefs_speak_speed_title">Beszédsebesség</string>
+  <string name="prefs_speak_speed_summary">Lassabb vagy gyorsabb beszéd</string>
+  <string name="speak_speed_slow">Lassú</string>
+  <string name="speak_speed_normal">Normál</string>
+  <string name="speak_speed_fast">Gyors</string>
   <!--Window-->
   <string name="window">Ablak</string>
   <string name="windowClose">Bezárás</string>
   <string name="windowMaximise">Teljes képernyő</string>
   <string name="windowMinimise">Minimalizálás</string>
-  <string name="windowSynchronise">Szinkronizálás</string>
+  <string name="windowSynchronise">Együtt mozgat</string>
   <string name="windowMoveFirst">Az első mozgatása</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">Ebben a fejezetben nincs jegyzet.</string>
@@ -107,35 +123,35 @@
   <string name="all_greek_occurrences">Összes előfordulás mutatása</string>
   <string name="all_hebrew_occurrences">Összes előfordulás mutatása</string>
   <string name="no_indexed_bible_with_strongs_ref">Le kell töltened egy Strong számokat tartalmazó Bibliát és a hozzá tartozó indexet is a Keresés segítségével.</string>
-  <string name="morph_robinson_not_installed">Kérlek, töltsd le Robinson morfológiai elemzés szótárát</string>
+  <string name="morph_robinson_not_installed">Kérlek, töltsd le Robinson morfológiai elemző szótárát</string>
   <string name="strongs_toggle_button_on">nnnn</string>
   <string name="strongs_toggle_button_off">nnnn</string>
   <!--Module download-->
   <string name="download">Dokumentumok letöltése</string>
   <string name="download_confirmation">Letöltesz egy Bibliát az internetről?</string>
-  <string name="download_source_message">A dokumentumok letöltése a \nhttp://www.crosswire.org\n&amp; http://ibt.org.ru\n&amp; http://xiphos.org címekről történnek.</string>
+  <string name="download_source_message">A dokumentumok letöltése a \nhttp://www.crosswire.org\n&amp; http://ibt.org.ru\n&amp; http://xiphos.org címekről történik.</string>
   <string name="download_document_confirm_prefix">Letöltés</string>
   <string name="download_refreshing_book_list">Elérhető dokumentumok listájának frissítése</string>
   <string name="download_refresh_book_list_menu_item">Frissítés</string>
   <string name="error_downloading">Hiba történt a letöltés közben. Kérlek, ellenőrizd az internetkapcsolatot.</string>
   <string name="no_internet_connection">Nem sikerült kapcsolódni az internethez.</string>
   <string name="storage_space_warning">Nincs elég üres hely az eszközön.</string>
-  <string name="wait_for_bible">Kérlek várj, amíg a Biblia teljesen letöltődik. Utána automatikusan a fő képernyő jelenik meg.\n\nTovábbi dokumentumokat később a Menü/Adminisztráció/Dokumentumok letöltése menüpont alatt tölthetsz le.</string>
-  <string name="wait_for_bible_not_yet">Kérlek várj. A Biblia telepítése még nem fejeződött be.</string>
-  <string name="download_complete_no_bibles">Nincs Biblia telepítve. Nyomd meg a Vissza gombot, és próbáld újra.</string>
-  <string name="too_many_jobs">Túl sok feladat fut. Kérlek várj, amíg valamelyik befejeződik és próbáld újra.</string>
+  <string name="wait_for_bible">Kérlek várj, amíg a Biblia teljesen letöltődik. Utána megjelenik a fő képernyő.\n\nTovábbi dokumentumokat később a Menü/Kezelés/Dokumentumok letöltése menüpont alatt tölthetsz le.</string>
+  <string name="wait_for_bible_not_yet">Kérlek, várj. A Biblia telepítése még nem fejeződött be.</string>
+  <string name="download_complete_no_bibles">Nincs Biblia telepítve. Nyomd meg a Vissza gombot és próbáld újra.</string>
+  <string name="too_many_jobs">Túl sok feladat fut. Kérlek, várj, amíg valamelyik befejeződik és próbáld újra.</string>
   <string name="document_not_installed">Kérlek töltsd le ezt: \'%s\'</string>
   <!--Install zip file-->
-  <string name="install_zip">Dokumentum betöltése Zip fájlból</string>
-  <string name="install_zip_successfull">A mudul telepítése sikeres</string>
+  <string name="install_zip">Dokumentum betöltése zip fájlból</string>
+  <string name="install_zip_successfull">A modul telepítése sikeres</string>
   <string name="extracting_zip_file">Zip fájl kicsomagolása folyamatban...</string>
   <string name="checking_zip_file">A fájl ellenőrzése...</string>
   <string name="invalid_module">A fájl nem tartalmaz érvényes SWORD modult</string>
-  <string name="module_already_installed">A fájl egy olyam modult tartalmaz, ami már telepítve van</string>
+  <string name="module_already_installed">A fájl egy olyan modult tartalmaz, amely már telepítve van</string>
   <!--Daily Reading Plan-->
   <string name="rdg_plan_title">Olvasási terv</string>
-  <string name="rdg_plan_selector_title">Olvasási terv kiválasztása</string>
-  <string name="rdg_plan_day">%s nap</string>
+  <string name="rdg_plan_selector_title">Olvasási terv választása</string>
+  <string name="rdg_plan_day">%s. nap</string>
   <string name="rdg_plan_set_start_jan1">Kezdés jan. 1-én</string>
   <string name="done">Kész</string>
   <string name="reset">Visszaállítás</string>
@@ -174,12 +190,12 @@
   <string name="rename">Átnevezés</string>
   <string name="style">Stílus</string>
   <!--Sort orders used for Bookmarks and MyNotes-->
-  <string name="sort_by_date">Kronológiai sorrend</string>
+  <string name="sort_by_date">Hozzáadás sorrendje</string>
   <string name="sort_by_bible_book">Bibliai sorrend</string>
-  <string name="sort_by_alphabetical">Abc sorrend</string>
+  <string name="sort_by_alphabetical">Ábécérend</string>
   <!--Dictionary-->
   <string name="dictionary">Szótár</string>
-  <string name="search_dictionary_hint">Szótár keresése</string>
+  <string name="search_dictionary_hint">Keresés a szótárban</string>
   <string name="dictionary_contents">Tartalom</string>
   <!--General Book-->
   <string name="general_book">Könyv</string>
@@ -193,18 +209,18 @@
   <!--Speak - Commentary-->
   <string name="one_verse">%d vers</string>
   <string name="some_verses">%d vers</string>
-  <string name="rest_of_chapter">A fejezet végéhez</string>
+  <string name="rest_of_chapter">A fejezet végéig</string>
   <!--Speak - Dictionary and other-->
   <string name="one_page">%d oldal</string>
   <string name="some_pages">%d oldal</string>
   <!--Speak - Common-->
   <string name="stop">Leállít</string>
-  <string name="pause">Leállítás</string>
-  <string name="rewind">Vissza</string>
-  <string name="forward">Előre</string>
+  <string name="pause">Szünet</string>
+  <string name="rewind">Visszatekerés</string>
+  <string name="forward">Előretekerés</string>
   <string name="tts_lang_not_available">Ez a nyelv nem érhető el.</string>
-  <string name="speak_queue">Sor</string>
-  <string name="speak_repeat">Ismételd</string>
+  <string name="speak_queue">Sorba állítás</string>
+  <string name="speak_repeat">Ismétlés</string>
   <!--User Notes-->
   <string name="mynotes">Jegyzeteim</string>
   <string name="mynote">Jegyzetem</string>
@@ -239,7 +255,7 @@
   <string name="more">Tovább</string>
   <string name="more_dotted">Tovább...</string>
   <string name="retry">Újrapróbál</string>
-  <string name="please_wait">Kérlek várj...</string>
+  <string name="please_wait">Kérlek, várj...</string>
   <string name="all">Mind</string>
   <string name="default_value">@string/lang_default</string>
   <string name="new_item">Új</string>
@@ -247,9 +263,9 @@
   <string name="edit">Szerkesztés</string>
   <!--Errors-->
   <string name="report_error">Jelentés küldése</string>
-  <string name="error_occurred">Hiba történt.</string>
+  <string name="error_occurred">Hiba történt</string>
   <string name="error_no_content">A kiválasztott vershez nem tartozik tartalom.</string>
-  <string name="error_page_too_large">Az oldal túl nagy a letöltéshez.</string>
+  <string name="error_page_too_large">Az oldal túl nagy a betöltéshez</string>
   <string name="error_key_not_in_document">A dokumentumban nem található.</string>
   <string name="empty_list">Nincs megtekinthető elem</string>
 </resources>
