--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -121,6 +121,10 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="speak_speed_normal">Normal</string>
     <string name="speak_speed_fast">Fast</string>
 
+    <string name="prefs_split_mode_vertical">Vertical</string>
+    <string name="prefs_split_mode_horizontal">Horizontal</string>
+    <string name="prefs_split_mode_automatic">Automatic</string>
+
     <!-- Window -->
     <string name="window">Window</string>
     <string name="windowClose">Close</string>
