--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -199,7 +199,8 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="compare_translations">Compare translations</string>
 
     <!-- Link context menu -->
-    <string name="open_link_in_this_window">Open link in this window</string>
+    <string name="open_link_in_this_window">Open link here</string>
+    <string name="open_link_in_new_window">Open link in new window</string>
     <string name="open_link_in_special_window">Open link in special window</string>
 
     <!-- Bookmarks -->
